--- a/cerca/index.html
+++ b/cerca/index.html
@@ -1,38 +1,144 @@
-<html>
+<!DOCTYPE html>
+<html lang="ca">
 <head>
-  <meta charset="UTF-8"><!-- Això es un comentari,set es conjunt i chart es caràcters o lletres i UTF-8 permet accents i ç-->
-</head><body>
-  <h1></u>Comparem perer ecològiques i convencionals: quin té més nutrients segons la ciència i la IA?</u></h1>
-  <p>He trobat diferents articles científics que estudien el meu tema i els trobareu a continuació en format APA7. APA7 es una forma d'escriure un article científic</p>
-  <ul<!--unordered list, llista desordenada-->
-  <img src="Captura1.png"><p>
-    A continuació veus un article científic que compara dos camps de préssecs, un convencional, i l'altre organic.
-    <ul>
-    <li></li>
-    </ul>
- <img src="Captura1.chatgpt.png">
-  A continuació, veus una imatge de ChatGPT que es disculpa.
-  Primer em deia que no trobava cap article, i després d'insisitr, m'ha dit tres articles, en el primer no tenia accès i li he preguntat si el préssec convencional o l'ecològic té més vitamina C.
-  Em va dir unes dades d'altres articles però no del que m'havia demanat, llavors se'l va inventar, i es va disculpar amb mi.
-   <p>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Web de l'Eric</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
+  <style>
+    /* 1. Submenús en mode fosc */
+    body[data-bs-theme="dark"] .dropdown-menu {
+      background-color: #2c2c2c !important;
+      border-color: #444;
+    }
+    body[data-bs-theme="dark"] .dropdown-item {
+      color: #f8f9fa !important;
+    }
+    body[data-bs-theme="dark"] .dropdown-item:hover,
+    body[data-bs-theme="dark"] .dropdown-item:focus {
+      background-color: #3c3c3c !important;
+      color: #ffffff !important;
+    }
+
+    /* 2. Botó mode fosc/clar només icona */
+    #themeToggle {
+      border: none;
+      background: transparent;
+      font-size: 1.3rem;
+      color: inherit;
+    }
+
+    /* 3. Hamburguesa blanca en mode fosc */
+    .navbar-toggler {
+      border: none;
+    }
+    .navbar-toggler-icon {
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280,0,0,0.7%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+    }
+    body[data-bs-theme="dark"] .navbar-toggler-icon {
+      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255,255,255,0.9%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+    }
+
+    /* 4. Logo circular i adaptatiu */
+    .logo {
+      width: 40px;
+      height: 40px;
+      object-fit: cover;
+    }
+    @media (max-width: 576px) {
+      .logo {
+        width: 30px;
+        height: 30px;
+      }
+    }
+    @media (min-width: 992px) {
+      .logo {
+        width: 50px;
+        height: 50px;
+      }
+    }
+  </style>
+</head>
+<body data-bs-theme="light">
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light shadow sticky-top">
+    <div class="container-fluid">
+      <!-- 5. Logo i text -->
+      <a class="navbar-brand d-flex align-items-center" href="#">
+        <img src="logo.png" alt="Logo" class="logo rounded-circle me-2">
+        <span class="fw-bold">Web d'Eric</span>
+      </a>
+
+      <!-- Botó menú mòbil -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Menú -->
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <!-- Projecte 1 -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="proj1Dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-diagram-project me-1"></i> Projecte Cerca IA vs Google Acadèmic
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="proj1Dropdown">
+              <li><a class="dropdown-item" href="https://emoreno12.github.io/cerca"><i class="fa-solid fa-code me-1"></i>Comparem préssecs</a></li>
+              <li><a class="dropdown-item" href="#"><i class="fa-solid fa-database me-1"></i> Projecte 1.2</a></li>
+            </ul>
+          </li>
+          <!-- Projecte 2 -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="proj2Dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="fa-solid fa-folder-open me-1"></i> 22 dies en 22 peus
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="proj2Dropdown">
+              <li><a class="dropdown-item" href="https://emoreno12.github.io/introduccio"><i class="fa-solid fa-chart-line me-1"></i> Introducció al projecte</a></li>
+              <li><a class="dropdown-item" href="https://emoreno12.github.io/vectors"><i class="fa-solid fa-cogs me-1"></i> Calculem rumbs amb vectors</a></li>
+            <li><a class="dropdown-item" href="https://emoreno12.github.io/distancies"><i class="fa-solid fa-cogs me-1"></i> Calculem distàncies amb GPS</a></li>
+            </ul>
+          </li>
+        </ul>
+        <!-- Botó mode clar/fosc -->
+        <button id="themeToggle" class="ms-2"><i class="fa-solid fa-moon"></i></button>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Contingut -->
+  <main class="container py-5">
+    <h1 class="display-5 fw-bold mb-4">Benvinguts als Projectes</h1>
+    <p class="lead">Aquesta és una web amb menú desplegable, icones Font Awesome, mode clar i fosc, i disseny responsiu per mòbil i ordinador utilitzant Bootstrap 5.3.8. Aquest és el punt de partida per editar tot i fer projectes amb el professor Francesc Pérez.</p>
+ <p class=lead">Sóc <u>Eric</u> de <b>4tA ESO</b> de l'<a href="https://agora.xtec.cat/ies-pompeu-fabra-martorell/">Institut Pompeu Fabra</a>
+  <p class="lead">En aquesta web veurem projectes realitzats durant 4t d'ESO a la matèria de Digitalització:
   </p>
-  Després tinc una altre foto del mateix article.
-  <img src="Captura2.png"><p></p>
-  I ChatGPT em va dir això:
- <img src="Captura2.chatgpt.png"><p></p>  
-    ChatGPT em va posar aquesta taula, i em va dir una cosa totalment diferent al que hi havia a la taula, i em va posar també que es deia d'una altre manera. Cap de les dades que em va posar va concordar amb el que deia l'article.
-  I aquesta és l'última captura que li vaig fer a aquest article.
- <img src="Captura3.png"><p></p>
-  I això és el que em va dir ChatGPT
- <img src="Captura3.chatgpt.png"><p></p>  
-  Es va inventar una altra taula i va dir una cosa semblant a l'altre, apart de que en les dos taules posava noms totalment diferents i després de jo posar-li el nom que posava a l'article em va dir que tenia tota la raó.
-<ul>
-    Ara ve el segon article:
-    <li>Carbonaro M., Mattera M.(2001).Polyphenoloxidase activity and polyphenol levels in organically and conventionally grown peach (Prunus persica L., cv. Regina bianca) and pear (Pyrus communis L., cv. Williams)
- Food Chemistry 72: 419-424</li><!--list item, element d'una llista-->
-</ul>
-    A continuació veus un article que compara els diferent minerals d'un préssec convenvional i orgànic.
-  <img src="Captura4.png"><p></p>
-</body>
+  <ul>
+    <li>Projecte 1: Comparar aliments ecològics i convencionals pel que fa al 
+      nivell de nutrients: vitamines, minerals, polifenols i altres substànicies beneficoses.</li>
+    <li>Projecte 2: 22 dies en 22 peus: és una cursa nàutica on aprenem a sumar vectors, 
+      calcular distàncies en GPS i altres activitats</li>
+  </ul>
  
+  </main>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Mode clar/fosc amb canvi d'icona
+    const themeToggle = document.getElementById('themeToggle');
+    const themeIcon = themeToggle.querySelector('i');
+
+    themeToggle.addEventListener('click', () => {
+      if (document.body.getAttribute('data-bs-theme') === 'dark') {
+        document.body.setAttribute('data-bs-theme', 'light');
+        themeIcon.classList.remove('fa-sun');
+        themeIcon.classList.add('fa-moon');
+      } else {
+        document.body.setAttribute('data-bs-theme', 'dark');
+        themeIcon.classList.remove('fa-moon');
+        themeIcon.classList.add('fa-sun');
+      }
+    });
+  </script>
+</body>
 </html>
