--- a/cerca/index.html
+++ b/cerca/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web de l'Eric</title>
+  <title>Web de l'Abdul</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
   <style>
@@ -67,7 +67,7 @@
       <!-- 5. Logo i text -->
       <a class="navbar-brand d-flex align-items-center" href="#">
         <img src="logo.png" alt="Logo" class="logo rounded-circle me-2">
-        <span class="fw-bold">Web d'Eric</span>
+        <span class="fw-bold">Web d'Abdul</span>
       </a>
 
       <!-- Botó menú mòbil -->
@@ -84,7 +84,7 @@
               <i class="fa-solid fa-diagram-project me-1"></i> Projecte Cerca IA vs Google Acadèmic
             </a>
             <ul class="dropdown-menu" aria-labelledby="proj1Dropdown">
-              <li><a class="dropdown-item" href="https://emoreno12.github.io/cerca"><i class="fa-solid fa-code me-1"></i>Comparem préssecs</a></li>
+              <li><a class="dropdown-item" href="https://emoreno12.github.io/cerca"><i class="fa-solid fa-code me-1"></i>Comparem peres</a></li>
               <li><a class="dropdown-item" href="#"><i class="fa-solid fa-database me-1"></i> Projecte 1.2</a></li>
             </ul>
           </li>
@@ -110,7 +110,7 @@
   <main class="container py-5">
     <h1 class="display-5 fw-bold mb-4">Benvinguts als Projectes</h1>
     <p class="lead">Aquesta és una web amb menú desplegable, icones Font Awesome, mode clar i fosc, i disseny responsiu per mòbil i ordinador utilitzant Bootstrap 5.3.8. Aquest és el punt de partida per editar tot i fer projectes amb el professor Francesc Pérez.</p>
- <p class=lead">Sóc <u>Eric</u> de <b>4tA ESO</b> de l'<a href="https://agora.xtec.cat/ies-pompeu-fabra-martorell/">Institut Pompeu Fabra</a>
+ <p class=lead">Sóc <u>Abdul</u> de <b>4tA ESO</b> de l'<a href="https://agora.xtec.cat/ies-pompeu-fabra-martorell/">Institut Pompeu Fabra</a>
   <p class="lead">En aquesta web veurem projectes realitzats durant 4t d'ESO a la matèria de Digitalització:
   </p>
   <ul>
