--- a/cerca/index.html
+++ b/cerca/index.html
@@ -84,7 +84,7 @@
               <i class="fa-solid fa-diagram-project me-1"></i> Projecte Cerca IA vs Google Acadèmic
             </a>
             <ul class="dropdown-menu" aria-labelledby="proj1Dropdown">
-              <li><a class="dropdown-item" href="https://emoreno12.github.io/cerca"><i class="fa-solid fa-code me-1"></i>Comparem peres</a></li>
+              <li><a class="dropdown-item" href="https://amalikr.github.io.github.io/cerca"><i class="fa-solid fa-code me-1"></i>Comparem peres</a></li>
               <li><a class="dropdown-item" href="#"><i class="fa-solid fa-database me-1"></i> Projecte 1.2</a></li>
             </ul>
           </li>
