--- a/cerca/index.html
+++ b/cerca/index.html
@@ -94,9 +94,9 @@
               <i class="fa-solid fa-folder-open me-1"></i> 22 dies en 22 peus
             </a>
             <ul class="dropdown-menu" aria-labelledby="proj2Dropdown">
-              <li><a class="dropdown-item" href="https://emoreno12.github.io/introduccio"><i class="fa-solid fa-chart-line me-1"></i> Introducció al projecte</a></li>
-              <li><a class="dropdown-item" href="https://emoreno12.github.io/vectors"><i class="fa-solid fa-cogs me-1"></i> Calculem rumbs amb vectors</a></li>
-            <li><a class="dropdown-item" href="https://emoreno12.github.io/distancies"><i class="fa-solid fa-cogs me-1"></i> Calculem distàncies amb GPS</a></li>
+              <li><a class="dropdown-item" href="https://amalikr.github.io.github.io/introduccio"><i class="fa-solid fa-chart-line me-1"></i> Introducció al projecte</a></li>
+              <li><a class="dropdown-item" href="https://amalikr.github.io.github.io/vectors"><i class="fa-solid fa-cogs me-1"></i> Calculem rumbs amb vectors</a></li>
+            <li><a class="dropdown-item" href="https://amalikr.github.io.github.io/distancies"><i class="fa-solid fa-cogs me-1"></i> Calculem distàncies amb GPS</a></li>
             </ul>
           </li>
         </ul>
